Wed Jul 11 20:17:07 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/config-aix-5.x.h: For IBM compilers Visual Age C++ 6 and up,
          use custom template export macros to correctly generate weak
          symbols for importable templates. Allows correct reuse of templates
          instantiated in a shared library - in this case, fixes failures
          in Based_Pointer_Test where singletons from ACE and another shared
          library did not resolve to the same pointer.

        * tests/Based_Pointer_Test.cpp: Use %@, not %x, to log pointer values.

Wed Jul 11 17:02:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Increased level for the tab check, something to fix in
          the future

Tue Jul 10 17:06:10 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/config-sunos5.10.h: Added correct printf() modifiers for
          ACE_SIZE_T_FORMAT_SPECIFIER and ACE_SSIZE_T_FORMAT_SPECIFIER.

Tue Jul 10 16:07:38 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/Basic_Types_Test.cpp:
        * tests/Time_Value_Test.cpp: Moved the ACE_U_LongLong checks from
          Time_Value_Test, where they were artificially wedged in for Sun,
          to Basic_Types_Test. The ACE_U_LongLong stuff was put in place
          (Tue Aug 26 11:06:45 1997  David L. Levine  <levine@cs.wustl.edu>)
          during what was apparantly some tumultuous platform times, then
          subsequently enabled and disabled in various platforms as needed
          to resolve side-affects. If it's still needed on any platforms
          that don't have native long long, it'll be run.

Tue Jul 10 14:30:50 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/INET_Addr.cpp:
          Reverted AIX-specific change. It didn't work.

Tue Jul 10 13:13:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.2.h:
        * ace/config-vxworks6.3.h:
        * ace/config-vxworks6.4.h: